--- a/depa/depa.vcxproj
+++ b/depa/depa.vcxproj
@@ -138,14 +138,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AND.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AND.h" />
+    <ClInclude Include="factoryMethod.h" />
+    <ClInclude Include="factoryMethode.hpp" />
+    <ClInclude Include="InputNode.h" />
     <ClInclude Include="NAND.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="NOR.h" />
     <ClInclude Include="NOT.h" />
     <ClInclude Include="OR.h" />
+    <ClInclude Include="ProbeNode.h" />
     <ClInclude Include="XOR.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
