--- a/depa/depa.vcxproj.filters
+++ b/depa/depa.vcxproj.filters
@@ -28,14 +28,17 @@
     <Filter Include="Source Files\Nodes">
       <UniqueIdentifier>{b54fd6c8-6f84-4a71-ae84-419c377c2431}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Interfaces">
-      <UniqueIdentifier>{24e13104-dacf-4981-aa35-bfed4711cbd2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\FileHandlers">
       <UniqueIdentifier>{e8311022-5ff1-4fea-aedf-c8fba316d61e}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\FileHandlers">
       <UniqueIdentifier>{d7dc791c-e816-4b60-a4d1-0abbec5bcbad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\IO">
+      <UniqueIdentifier>{00e853e7-94ed-4766-8894-0006273abec7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\IO">
+      <UniqueIdentifier>{9cc6b062-dcaf-4e24-ab15-6345a803bfdd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +84,15 @@
     <ClCompile Include="OutputFileHandler.cpp">
       <Filter>Source Files\FileHandlers</Filter>
     </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Source Files\IO</Filter>
+    </ClCompile>
+    <ClCompile Include="AdjList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Output.cpp">
+      <Filter>Source Files\IO</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AND.h">
@@ -101,9 +113,6 @@
     <ClInclude Include="factoryMethod.h">
       <Filter>Header Files\factoryMethodes</Filter>
     </ClInclude>
-    <ClInclude Include="factoryMethode.hpp">
-      <Filter>Header Files\factoryMethodes</Filter>
-    </ClInclude>
     <ClInclude Include="Node.h">
       <Filter>Header Files\Node</Filter>
     </ClInclude>
@@ -115,12 +124,6 @@
     </ClInclude>
     <ClInclude Include="XOR.h">
       <Filter>Header Files\logicGates</Filter>
-    </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Header Files\Interfaces</Filter>
-    </ClInclude>
-    <ClInclude Include="Output.h">
-      <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
     <ClInclude Include="Circuit.h">
       <Filter>Header Files</Filter>
@@ -137,5 +140,22 @@
     <ClInclude Include="Defines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="factoryMethod.hpp">
+      <Filter>Header Files\factoryMethodes</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Header Files\IO</Filter>
+    </ClInclude>
+    <ClInclude Include="AdjList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Output.h">
+      <Filter>Header Files\IO</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="circuit1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
