--- a/depa/depa.vcxproj.filters
+++ b/depa/depa.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClCompile Include="ErrorHandling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AND.h">
@@ -156,6 +162,12 @@
       <Filter>Header Files\Node</Filter>
     </ClInclude>
     <ClInclude Include="ErrorHandling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
